--- a/manifests/klever-web/templates/deployment.yaml
+++ b/manifests/klever-web/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
           - name: BACKEND
             value: {{ .Values.model.registry.address }}
           - name: PORT
-            value: {{ .Values.service.port }}
+            value: {{ .Values.service.port | quote }}
           name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
