--- a/manifests/klever-web/templates/service.yaml
+++ b/manifests/klever-web/templates/service.yaml
@@ -1,16 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "klever-web.fullname" . }}
-  labels:
-    {{- include "klever-web.labels" . | nindent 4 }}
+  name: { { include "klever-web.fullname" . } }
+  labels: { { - include "klever-web.labels" . | nindent 4 } }
 spec:
-  type: {{ .Values.service.type }}
+  type: { { .Values.service.type } }
   ports:
-    - port: {{ .Values.service.port }}
-      nodePort: {{ .Values.service.nodePort }}
+    - port: { { .Values.service.port } }
+      nodePort: { { .Values.service.nodePort } }
       targetPort: http
       protocol: TCP
       name: http
-  selector:
-    {{- include "klever-web.selectorLabels" . | nindent 4 }}
+  selector: { { - include "klever-web.selectorLabels" . | nindent 4 } }
