fix(dockerfile): Update dockerfile and file name

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,20 +2,17 @@
 /npm-debug.log*
 /yarn-error.log
 /package-lock.json
-
+/dist
+/docs
+/manifests
+/scripts
 .DS_Store
 node_modules
 .github
-public
-src
 .git
 .editorconfig
 .env
 .gitignore
 .prettierignore
-.prettierrc
-.umirc.ts
-README.md
-tsconfig.json
-typings.d.ts
 OWNERS
+CONTRIBUTING.md
